syntax = "proto3";
package registry.firewall.v1;

// Firewall configuration - Deprecated
message FirewallConfig {
  // The firewall configuration content
  string firewall_config = 1;

  // List of allowed IPv4 prefixes
  repeated string ipv4_prefixes = 2;

  // List of allowed IPv6 prefixes
  repeated string ipv6_prefixes = 3;
}

// Available actions for firewall rules
enum FirewallAction {
  FIREWALL_ACTION_UNSPECIFIED = 0;
  // Allow traffic
  FIREWALL_ACTION_ALLOW = 1;
  // Deny (drop) traffic
  FIREWALL_ACTION_DENY = 2;
  // Reject traffic (send ICMP error back)
  FIREWALL_ACTION_REJECT = 3;
}

enum FirewallRuleDirection {
  FIREWALL_RULE_DIRECTION_UNSPECIFIED = 0;
  FIREWALL_RULE_DIRECTION_INBOUND = 1;
  FIREWALL_RULE_DIRECTION_OUTBOUND = 2;
}

message FirewallRule {
  repeated string ipv4_prefixes = 1;
  repeated string ipv6_prefixes = 2;
  repeated uint32 ports = 3;
  FirewallAction action = 4;
  string comment = 5;
  optional string user = 6;
  optional FirewallRuleDirection direction = 7;
}

message FirewallRuleSet {
  repeated FirewallRule entries = 1;
}
